--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true sivalka/docker-kubernetes npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-kubernetes"
+  env: "DockerKubernetes-env"
+  bucket_name: "elasticbeanstalk-us-east-1-601889650162"
+  bucket_path: "docker-kubernetes"
+  on:
+    branch: master
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
